cabal-version:      3.0
name:               priority
version:            0.1.0.0
synopsis:           Data types to represent priorities
description:        Data types to represent priorities
homepage:           https://github.com/schuelermine/priority
bug-reports:        https://github.com/schuelermine/priority/issues
license:            MIT
license-file:       LICENSE
author:             Anselm Schüler
maintainer:         mail@anselmschueler.com
copyright:          ⓒ 2022 Anselm Schüler
category:           Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.Adjustable
    Data.BinaryOffset
    Data.Subpriority
  build-depends:
    base            >=4.14 && <5
  hs-source-dirs:   lib
  default-language: Haskell2010

test-suite tests
  type:             detailed-0.9
  test-module:      Tests
  build-depends:
    QuickCheck      ^>=2.14.2,
    Cabal           ^>=3.6.3,
    base            >=4.14 && <5,
    priority
  hs-source-dirs:   test
  default-language: Haskell2010
